# vibe-m5stack

./: .gitignore  LICENSE  NOTICE  PLUGIN_README.md  README.md  install.ps1  install.sh  pyproject.toml  readme.txt  test_bt_bridge.ps1  test_hook_e2e.py  vibe-m5stack
.github/workflows/: firmware.yml
docs/: 404.html
docs/flash/: .gitkeep  .nojekyll  index.html  manifest.json
firmware/: platformio.ini
firmware/src/: main.cpp
firmware/src/display/: anim.cpp  anim.h  gif_animator.cpp  gif_animator.h  gif_metadata.h  mistral_logo.h  screen.cpp  screen.h  shake_animation.cpp  shake_animation.h
firmware/src/inputs/: buttons.cpp  buttons.h  imu.cpp  imu.h  leds.cpp  leds.h
firmware/src/serial/: protocol.cpp  protocol.h  serial_io.cpp  serial_io.h
plugin/: __init__.py  __main__.py  approval.py  bridge.py  broker.py  cli.py  config.py  generate_all_frames.py  generate_frames.py  generate_frames_final.py  generate_frames_optimized.py  m5stack_utils.py  mcp_config_example.toml  mcp_server.py  requirements.txt  test_bridge.py  test_broker.py  test_cli.py  test_config.py  test_hook.py  test_integration.py  test_mcp_server.py  test_status.py  vibe_hook.py  vibe_m5stack_hook.py
tests/: README.md  __init__.py  conftest.py  test_bridge_ping_filter.py  test_bridge_probe.py  test_hook_format.py  test_session_manager.py
tools/: led_demo.py
