# Vibe M5Stack - M5Stack integration for Mistral Vibe CLI
# Copyright 2026 Romain Delfosse
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-m5stack"
version = "0.2.0"
description = "Physical approval device (M5Stack Fire) for Mistral Vibe CLI"
requires-python = ">=3.10"
dependencies = [
    "mistral-vibe>=2.11",
    "pyserial>=3.5",
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
    "filelock>=3.13",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
vibe-m5stack = "plugin.__main__:main"
m5stack-mcp-server = "plugin.mcp_server:main"

[tool.setuptools]
packages = ["plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --tb=short"
